--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-339.8KB/s(Youtube:不良林), server: 41.216.177.41, port: 443, type: trojan, password: 274c1b23-2bfe-40ac-943c-ebc1aa044b22, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.10MB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-854.1KB/s(Youtube:不良林), server: jgwcc2.gaox.ml, port: 443, type: trojan, password: 9c822f05-cfdc-479a-9534-60f3d4127435, sni: jgwcc2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.67MB/s(Youtube:不良林), server: sg-04.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-04.licom.ml, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-3.07MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.24MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-5.24MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-4.62MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-10.27MB/s(Youtube:不良林), server: test01.alderlake.gay, port: 25382, type: ssr, cipher: rc4-md5, password: Xb2FW8, protocol: origin, obfs: http_simple, protocol-param: "", obfs-param: ""}
-  - {name: 🇩🇪 德国-3.03MB/s(Youtube:不良林), server: 146.0.42.87, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 146.0.42.87}}
+  - {name: 🇺🇸 美国-5.21MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.69MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.85MB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.81MB/s(Youtube:不良林), server: hn.zfnode.org, port: 30217, type: trojan, password: 63ec756d-1f6a-36c8-a9fd-025f4acfc74f, sni: hn.zfnode.org, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.76MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.79MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇸🇬 新加坡-3.80MB/s(Youtube:不良林), server: x.alinkrelay.com, port: 13000, type: trojan, password: 0bcd3b39-b597-45c4-b1e6-79b5e43ba4af, sni: x.alinkrelay.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.39MB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.36MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.37MB/s(Youtube:不良林), server: usyy.884899.cf, port: 443, type: trojan, password: 2debb06b-95ce-4e9b-956a-6cf7cadac30c, sni: usyy.884899.cf, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-339.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-854.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.07MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.27MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.81MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.76MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.79MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-339.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-854.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.07MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.27MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.81MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.76MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.79MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-339.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-854.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.07MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.27MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.81MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.76MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.79MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-339.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-854.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.07MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.27MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.81MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.76MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.79MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-339.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-854.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.07MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.27MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.81MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.76MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.79MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-339.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-854.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.07MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.27MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.81MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.76MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.79MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-339.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-854.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.07MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.27MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.81MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.76MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.79MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
