--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-3.51MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.08MB/s(Youtube:不良林), server: 81.90.189.18, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇳🇱 荷兰-730.8KB/s(Youtube:不良林), server: 41.216.177.41, port: 443, type: trojan, password: 274c1b23-2bfe-40ac-943c-ebc1aa044b22, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.76MB/s(Youtube:不良林), server: 172.96.192.58, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
-  - {name: 🇨🇳 中国-5.89MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇸🇬 新加坡-373.2KB/s(Youtube:不良林), server: 194.124.35.40, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-1.16MB/s(Youtube:不良林), server: 217.197.161.164, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-454.9KB/s(Youtube:不良林), server: 194.124.35.40, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-1.16MB/s(Youtube:不良林) 2, server: 217.197.161.164, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-308.5KB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-11.50MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.60MB/s(Youtube:不良林), server: x.alinkrelay.com, port: 13000, type: trojan, password: 0bcd3b39-b597-45c4-b1e6-79b5e43ba4af, sni: x.alinkrelay.com, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.79MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇸🇬 新加坡-373.9KB/s(Youtube:不良林), server: 194.124.35.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇸🇬 新加坡-741.0KB/s(Youtube:不良林), server: 81.90.189.18, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇮🇳 印度-1.20MB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
+  - {name: 塞浦路斯-880.9KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
+  - {name: 🇺🇸 美国-3.86MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32462, type: trojan, password: cb5e2135-4d64-4454-be98-5bae4f2618d1, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-346.8KB/s(Youtube:不良林), server: 194.124.35.48, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-3.51MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-730.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-373.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-454.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.16MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-308.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.60MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.79MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-373.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-741.0KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.20MB/s(Youtube:不良林)
+      - 塞浦路斯-880.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-346.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-3.51MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-730.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-373.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-454.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.16MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-308.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.60MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.79MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-373.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-741.0KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.20MB/s(Youtube:不良林)
+      - 塞浦路斯-880.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-346.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-3.51MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-730.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-373.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-454.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.16MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-308.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.60MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.79MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-373.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-741.0KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.20MB/s(Youtube:不良林)
+      - 塞浦路斯-880.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-346.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-3.51MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-730.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-373.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-454.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.16MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-308.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.60MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.79MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-373.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-741.0KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.20MB/s(Youtube:不良林)
+      - 塞浦路斯-880.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-346.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-3.51MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-730.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-373.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-454.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.16MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-308.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.60MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.79MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-373.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-741.0KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.20MB/s(Youtube:不良林)
+      - 塞浦路斯-880.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-346.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-3.51MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-730.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-373.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-454.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.16MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-308.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.60MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.79MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-373.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-741.0KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.20MB/s(Youtube:不良林)
+      - 塞浦路斯-880.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-346.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-3.51MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-730.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-373.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-454.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.16MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-308.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.60MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.79MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-373.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-741.0KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.20MB/s(Youtube:不良林)
+      - 塞浦路斯-880.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-346.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
