--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-308.5KB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-11.50MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.60MB/s(Youtube:不良林), server: x.alinkrelay.com, port: 13000, type: trojan, password: 0bcd3b39-b597-45c4-b1e6-79b5e43ba4af, sni: x.alinkrelay.com, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-2.79MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇸🇬 新加坡-373.9KB/s(Youtube:不良林), server: 194.124.35.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-741.0KB/s(Youtube:不良林), server: 81.90.189.18, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇮🇳 印度-1.20MB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
-  - {name: 塞浦路斯-880.9KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
-  - {name: 🇺🇸 美国-3.86MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32462, type: trojan, password: cb5e2135-4d64-4454-be98-5bae4f2618d1, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-346.8KB/s(Youtube:不良林), server: 194.124.35.48, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-1.12MB/s(Youtube:不良林), server: 81.90.189.18, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-3.55MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.16MB/s(Youtube:不良林), server: 217.197.161.164, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-525.2KB/s(Youtube:不良林), server: 194.124.35.42, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-3.30MB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-711.6KB/s(Youtube:不良林), server: lc-hk01-direct01.lc-hk01.lc-node.com, port: 443, type: vmess, uuid: ec736482-173e-3eff-9114-b49df8056e7d, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: lc-hk01-direct01.lc-hk01.lc-node.com}}
+  - {name: 🇸🇬 新加坡-1.11MB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
+  - {name: 🇺🇸 美国-3.21MB/s(Youtube:不良林), server: 104.149.154.154, port: 25966, type: vmess, uuid: ca06e0f0-ca6e-418f-800d-97b23ba51bca, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /VTd4o3Kj/, ws-headers: {Host: 104.149.154.154}}
+  - {name: 🇺🇸 美国-1.90MB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-308.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.60MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.79MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-373.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-741.0KB/s(Youtube:不良林)
       - 🇮🇳 印度-1.20MB/s(Youtube:不良林)
-      - 塞浦路斯-880.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-346.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.55MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.16MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-525.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-711.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-308.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.60MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.79MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-373.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-741.0KB/s(Youtube:不良林)
       - 🇮🇳 印度-1.20MB/s(Youtube:不良林)
-      - 塞浦路斯-880.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-346.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.55MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.16MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-525.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-711.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-308.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.60MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.79MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-373.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-741.0KB/s(Youtube:不良林)
       - 🇮🇳 印度-1.20MB/s(Youtube:不良林)
-      - 塞浦路斯-880.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-346.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.55MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.16MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-525.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-711.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-711.6KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-308.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.60MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.79MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-373.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-741.0KB/s(Youtube:不良林)
       - 🇮🇳 印度-1.20MB/s(Youtube:不良林)
-      - 塞浦路斯-880.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-346.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.55MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.16MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-525.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-711.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-308.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.60MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.79MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-373.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-741.0KB/s(Youtube:不良林)
       - 🇮🇳 印度-1.20MB/s(Youtube:不良林)
-      - 塞浦路斯-880.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-346.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.55MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.16MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-525.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-711.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-308.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.60MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.79MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-373.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-741.0KB/s(Youtube:不良林)
       - 🇮🇳 印度-1.20MB/s(Youtube:不良林)
-      - 塞浦路斯-880.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-346.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.55MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.16MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-525.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-711.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-308.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.60MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.79MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-373.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-741.0KB/s(Youtube:不良林)
       - 🇮🇳 印度-1.20MB/s(Youtube:不良林)
-      - 塞浦路斯-880.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-346.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.55MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.16MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-525.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-711.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
